--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -6,16 +6,16 @@
 #    By: meserghi <meserghi@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 18:29:15 by meserghi          #+#    #+#              #
-#    Updated: 2024/03/14 21:00:36 by meserghi         ###   ########.fr        #
+#    Updated: 2024/03/15 01:09:24 by meserghi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 FILE = philo_bonus.c utils/ft_atoi_bonus.c utils/init_philo_bonus.c utils/parsing_bonus.c\
-	utils/my_time_bonus.c utils/my_sleep_bonus.c utils/routine_bonus.c
+	utils/my_time_bonus.c utils/my_sleep_bonus.c utils/routine_bonus.c utils/my_free_bonus.c
 #utils/my_free_bonus.c
 FILE_OBJ = ${FILE:.c=.o}
 #-fsanitize=thread -g
-FLAGS = -Wall -Wextra -Werror
+FLAGS = -Wall -Wextra -Werror #-fsanitize=thread -g
 NAME = philo_bonus
 
 all : ${NAME}
